# WireTurtle3D

./: .gitignore  README.fr.md  README.md  duck.py  main.py  pyproject.toml  shapes.py  showcase.py  test.py  utils.py
examples/: minimal.py  minimal_fr.py  showcase.py
src/wireturtle3d/: __init__.py  core.py  shapes.py  utils.py
